--- a/blueprint/src/web.tex
+++ b/blueprint/src/web.tex
@@ -19,7 +19,7 @@
 \dochome{https://JonBannon.github.io/double_commutant/docs}
 
 \title{von Neumann Double Commutant Theorem}
-\author{Jon Bannon a\and Jireh Loreaux}
+\author{Jon Bannon \and Jireh Loreaux}
 
 \begin{document}
 \maketitle
