--- a/blueprint/src/print.tex
+++ b/blueprint/src/print.tex
@@ -25,7 +25,7 @@
 \input{macros/print}
 
 \title{von Neumann Double Commutant Theorem}
-\author{Jon Bannon a\and Jireh Loreaux}
+\author{Jon Bannon \and Jireh Loreaux}
 
 \begin{document}
 \maketitle
