--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -6,6 +6,10 @@
 % the current file can be a simple sequence of \input. Otherwise It
 % can start with a \section or \chapter for instance
 
+\begin{definition}\label{commutant}
+Commutant
+\end{definition}
+
 \begin{theorem}[von Neumann 1929]
   \label{thm:double_commutant}
   \lean{double_commutant}
