--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -6,11 +6,9 @@
 % the current file can be a simple sequence of \input. Otherwise It
 % can start with a \section or \chapter for instance
 
-\begin{definition}\label{commutant}
-Commutant
-\end{definition}
 
 \begin{theorem}[von Neumann 1929]
+  \label{def:commutant}
   \label{thm:double_commutant}
   \lean{double_commutant}
   \leanok
