--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -6,9 +6,12 @@
 % the current file can be a simple sequence of \input. Otherwise It
 % can start with a \section or \chapter for instance
 
+\begin{definition}
+  \label{def:commutant}
+  The commutant of a set $S$ of operators is the set of $T\in B(\mathcal{H})$ such that $\forall s\in S, Ts=sT$.
+\end{definition}
 
 \begin{theorem}[von Neumann 1929]
-  \label{def:commutant}
   \label{thm:double_commutant}
   \lean{double_commutant}
   \leanok
