--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -8,6 +8,8 @@
 
 \begin{definition}
   \label{def:commutant}
+  \lean{commutant}
+  \leanok
   The commutant of a set $S$ of operators is the set of $T\in B(\mathcal{H})$ such that $\forall s\in S, Ts=sT$.
 \end{definition}
 
