--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -6,7 +6,9 @@
 % the current file can be a simple sequence of \input. Otherwise It
 % can start with a \section or \chapter for instance
 
-\begin{definition}
+\usepackage[thms=dfn+lem+prop+thm+cor]{blueprint}
+
+\begin{definition}[Blah]
   \label{def:commutant}
   \lean{commutant}
   The commutant of a set $S$ of operators is the set of $T\in B(\mathcal{H})$ such that $\forall s\in S, Ts=sT$.
